# pysqlparse

./: .gitignore  README.md  setup.cfg
pysqlparse/: parser.py
tests/: test_parser.py
