[metadata]
name = py-sql-parser
version = 0.0.1
author = Lawrence Weikum
author_email = lawrencemq@gmail.com
description = Extract table names and other information from SQL queries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lawrencemq/py-sql-parser
project_urls =
    Bug Tracker = https://github.com/lawrencemq/py-sql-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Software Development
keywords =
    sql
    parse

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = py_sql_parser

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths =
    "tests"